[tool.poetry]
name = "gerador-de-contratos"
version = "0.1.0"
description = "Gerador de contratos automatizados com Python"
authors = ["Caio Couto <caiofelipecoutoramosesilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
pandas = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
