[tool.poetry]
name = "projeto_saude"
version = "0.1.0"
description = "Formulário de cadastro de plano de saúde com Flask"
authors = ["Caio Couto <caiofelipecoutoramosesilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
pandas = "2.2.2"
docx = "0.2.4"
docx2pdf = "^0.1.8"
email-validator = "^2.2.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
python-docx = "^1.1.2"
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
